# cgal-project3

project_p3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  evaluate  main.cpp
project_p3/includes/: CMakeLists.txt  ConvexHull.cpp  ConvexHull.h  Incremental.cpp  Incremental.h  Makefile  Polygon.cpp  Polygon.h  cmake_install.cmake
